--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ idna==2.9
 importlib-metadata==1.5.0
 notebook==6.0.3
 numpy==1.18.1
+opencv-python==4.4.0
 pickleshare==0.7.5
 pyOpenSSL==19.1.0
 pyrsistent==0.16.0
