--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.1.6
 future==0.18.2
 geocoder==1.38.1
 idna==2.10
+mysqlclient==2.0.3
 numpy==1.20.1
 opencv-python==4.5.1.48
 PyJWT==1.7.1
