--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 decorator==4.4.2
-Django==3.1.6
+Django==2.1.15 
+django-azure-sql-backend==2.1.1.1
+cryptography==3.4.4 
+msal==1.9.0
 future==0.18.2
 geocoder==1.38.1
 idna==2.10
